fixing spacing

--- a/css/main.css
+++ b/css/main.css
@@ -182,9 +182,13 @@ a:focus {
   border-radius: 50%;
 }
 
+.profile-right {
+    padding: 20px 0 10px;
+}
 
 .title {
     text-align: center;
+    margin-top: 20px;
 }
 
 
@@ -194,14 +198,13 @@ a:focus {
   width: 100%;
   padding: 20px;
   max-width: 800px;
-  margin: 0 auto 20px;
+  margin: 0 auto;
 }
 
 .skills-box {
   width: 100%;
   display: flex;
-  margin-bottom: 40px;
-  padding-bottom: 40px;
+  padding: 20px 20px;
 }
 
 .skills-left, .skills-right {
@@ -222,7 +225,8 @@ a:focus {
   width: 100%;
   padding: 20px;
   max-width: 1000px;
-  margin: 0 auto 40px; 
+  margin: 20px auto;
+  border-top: 1px solid #42b1b3;
   
 }
 
